--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "dev:ssr": "ng run small-talk-angular-ssr:serve-ssr",
     "serve:ssr": "node dist/small-talk-angular-ssr/server/main.js",
     "build:ssr": "ng build --configuration production && ng run small-talk-angular-ssr:server",
-    "prerender": "ng run small-talk-angular-ssr:prerender"
+    "prerender": "ng run small-talk-angular-ssr:prerender",
+    "prepare": "husky install"
   },
   "private": true,
   "dependencies": {
@@ -47,6 +48,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.9.4"
+    "typescript": "~4.9.4",
+    "husky": "^8.0.0"
   }
 }
